--- a/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.Web/Pages/Suppliers.cshtml
+++ b/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.Web/Pages/Suppliers.cshtml
@@ -1,6 +1,8 @@
 @page
 @using Packt.Shared
 @model Northwind.Web.Pages.SuppliersModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
 
 <div class="row">
     <h1 class="display-2">Suppliers</h1>
@@ -26,4 +28,20 @@
             }
         </tbody>
     </table>
+</div>
+
+<div class="row">
+    <p>Enter details for a new supplier:</p>
+    <form method="post">
+        <div>
+            <input asp-for="Supplier.CompanyName" placeholder="Company Name" />
+        </div>
+        <div>
+            <input asp-for="Supplier.Country" placeholder="Country" />
+        </div>
+        <div>
+            <input asp-for="Supplier.Phone" placeholder="Phone" />
+        </div>
+        <input type="submit" />
+    </form>
 </div>
