Csharp11AndDotNet7: Update PracticalApps, customers and customer details

--- a/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.Web/Pages/index.cshtml
+++ b/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.Web/Pages/index.cshtml
@@ -21,4 +21,7 @@
     <p>
         <a class="btn btn-primary" href="packtfeatures/employees">Contact our employees</a>
     </p>
+    <p>
+        <a class="btn btn-primary" href="customers">Learn more about our customers</a>
+    </p>
 </div>
