--- a/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.Mvc/Views/Home/Index.cshtml
+++ b/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.Mvc/Views/Home/Index.cshtml
@@ -77,6 +77,12 @@
       We have had @Model?.VisitorCount visitors this month.
     </p>
 
+    <h3>Query Products By Price</h3>
+    <form asp-action="ProductsThatCostMoreThan" method="post">
+        <input name="price" placeholder="Enter a product price" />
+        <input type="submit" />
+    </form>
+
     @if (Model is not null)
     {
       <h2>Products</h2>
