--- a/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.Mvc/Views/Home/Index.cshtml
+++ b/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.Mvc/Views/Home/Index.cshtml
@@ -49,8 +49,9 @@
             <h2>@Model.Categories[c].CategoryName</h2>
             <h3>@Model.Categories[c].Description</h3>
             <p>
-              <a class="btn btn-primary"
-                href="/category/@Model.Categories[c].CategoryId">View</a>
+              <a class="btn btn-primary" href="/home/category/@Model.Categories[c].CategoryId">View</a>
+              @* <a class="btn btn-primary" asp-controller="Home"
+                asp-action="Category" asp-route-id="@Model.Categories[c].CategoryId">View</a> *@
             </p>
           </div>
         </div>
