--- a/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.BlazorWasm/Client/_Imports.razor
+++ b/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.BlazorWasm/Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using Northwind.BlazorWasm.Client
 @using Northwind.BlazorWasm.Client.Shared
+@using Packt.Shared @* Customer, Order, and so on *@
+@using Northwind.BlazorWasm.Client.Data
