--- a/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.BlazorServer/Shared/NavMenu.razor
+++ b/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.BlazorServer/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject INorthwindService service
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Northwind.BlazorServer</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -36,6 +38,21 @@
             </NavLink>
         </div>
 
+        @foreach (string? country in service.GetCountries().Result)
+        {
+            @if (country is not null)
+            {
+                @* Blazor doesn't allow combination of text and @Razor expression. *@
+                @* Use a local variable here to avoid this problem. *@
+                string countryLink = $"customers/{country}";
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="@countryLink">
+                        <span class="oi oi-people" aria-hidden="true"></span> Customers in @country
+                    </NavLink>
+                </div>
+            }
+        }
     </nav>
 </div>
 
