--- a/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.BlazorServer/Pages/Index.razor
+++ b/Csharp/Csharp11AndDotNet7/PracticalApps/Northwind.BlazorServer/Pages/Index.razor
@@ -8,5 +8,37 @@ Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
 
+<button type="button" class="btn btn-info" @onclick="AlertBrowser">
+  Poke the browser</button>
+<hr />
+<input id="colorBox" />
+<button type="button" class="btn btn-info" @onclick="SetColor">
+  Set Color</button>
+<button type="button" class="btn btn-info" @onclick="GetColor">
+  Get Color</button>
+
 <Customers Country="Germany" />
 <Customers />
+
+@code {
+    [Inject]
+    public IJSRuntime JSRuntime { get; set; } = null!;
+    public async Task AlertBrowser()
+    {
+        await JSRuntime.InvokeVoidAsync(
+            "messageBox", "Blazor poking browser"
+        );
+    }
+    public async Task SetColor()
+    {
+        await JSRuntime.InvokeVoidAsync(
+            "setColorInStorage"
+        );
+    }
+    public async Task GetColor()
+    {
+        await JSRuntime.InvokeVoidAsync(
+            "getColorFromStorage"
+        );
+    }
+}
