WebDevWithBlazor: chap6, Admin interface

--- a/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Pages/Post.razor
+++ b/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Pages/Post.razor
@@ -1,6 +1,7 @@
 ﻿@page "/post/{BlogPostId}"
 @inject IBlogApi _api
 @inject NavigationManager _navman
+@using Markdig
 
 @if (BlogPost != null)
 {
@@ -13,7 +14,7 @@
     </HeadContent>
 
     <h2>@BlogPost.Title</h2>
-    @((MarkupString)BlogPost.Text)
+    @((MarkupString)Markdig.Markdown.ToHtml(BlogPost.Text, pipeline))
 }
 
 @code {
@@ -21,6 +22,14 @@
     public string BlogPostId { get; set; }
 
     public BlogPost? BlogPost { get; set; }
+
+    MarkdownPipeline pipeline;
+
+    protected override Task OnInitializedAsync()
+    {
+        pipeline = new MarkdownPipelineBuilder().UseEmojiAndSmiley().Build();
+        return base.OnInitializedAsync();
+    }
 
     protected override async Task OnParametersSetAsync()
     {
