WebDevWithBlazor: chap8, auth for BlazorServer

--- a/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Pages/Admin/BlogPostEditor.razor
+++ b/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Pages/Admin/BlogPostEditor.razor
@@ -4,6 +4,7 @@
 @inject NavigationManager _manager
 @using Components.RazorComponents
 @using Markdig
+@attribute [Authorize]
 
 <EditForm Model="Post" OnValidSubmit="SavePost">
     <DataAnnotationsValidator />
