--- a/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Pages/Admin/CategoryList.razor
+++ b/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Pages/Admin/CategoryList.razor
@@ -1,6 +1,7 @@
 ﻿@page "/admin/categories"
 @using Components.RazorComponents
 @inject IBlogApi _api
+@attribute [Authorize]
 
 <h3>Categories</h3>
 
