--- a/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/_Imports.razor
+++ b/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/_Imports.razor
@@ -9,3 +9,5 @@
 @using Components.Shared
 @using Data.Models;
 @using Data.Models.Interfaces;
+@using Microsoft.AspNetCore.Components.Authorization
+@using Components.RazorComponents
