WebDevWithBlazor: chap8, authentication and authorization

--- a/Csharp/WebDevelopmentWithBlazor/MyBlog/BlazorWebAssembly/Client/_Imports.razor
+++ b/Csharp/WebDevelopmentWithBlazor/MyBlog/BlazorWebAssembly/Client/_Imports.razor
@@ -9,3 +9,7 @@
 @using BlazorWebAssembly.Client
 @using Components.Pages
 @using Components.Shared
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
+@using Components.RazorComponents
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
