--- a/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Shared/NavMenu.razor
+++ b/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Shared/NavMenu.razor
@@ -1,4 +1,13 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿<AuthorizeView Roles="Administrator">
+    <Authorized>
+        Hi, admin!
+    </Authorized>
+    <NotAuthorized>
+        You are not an admin =(
+    </NotAuthorized>
+</AuthorizeView>
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">BlazorWebAssembly</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
