--- a/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Pages/Admin/CategoryList.razor
+++ b/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Pages/Admin/CategoryList.razor
@@ -1,19 +1,16 @@
 ﻿@page "/admin/categories"
+@attribute [Authorize]
 @using Components.RazorComponents
 @inject IBlogApi _api
-@attribute [Authorize]
-
 <h3>Categories</h3>
-
-<EditForm Model="Item" OnValidSubmit="Save">
-    <DataAnnotationsValidator/>
-    <CustomCssClassProvider ProviderType="BootstrapFieldCssClassProvider"/>
-    <InputText @bind-Value="Item.Name"/>
-    <ValidationMessage For="@(() => Item.Name)"/>
-    <button class="btn btn-success" type="submit">Submit</button>
+<EditForm OnValidSubmit="Save" Model="Item">
+    <DataAnnotationsValidator />
+    <CustomCssClassProvider ProviderType="BootstrapFieldCssClassProvider" />
+    <InputText @bind-Value="@Item.Name" />
+    <ValidationMessage For="@(()=>Item.Name)" />
+    <button class="btn btn-success" type="submit">Save</button>
 </EditForm>
-
-<ItemList Items="Items" ItemType="Category" DeleteEvent="@Delete" SelectEvent="@Select">
+<ItemList Items="Items" DeleteEvent="@Delete" SelectEvent="@Select" ItemType="Category">
     <ItemTemplate>
         @{
             var item = context as Category;
@@ -24,28 +21,23 @@
         }
     </ItemTemplate>
 </ItemList>
-
 @code {
     private List<Category> Items { get; set; } = new();
     public Category Item { get; set; } = new();
-
-    protected override async Task OnInitializedAsync()
+    protected async override Task OnInitializedAsync()
     {
-        Items = (await _api.GetCategoriesAsync()) ?? Items;
+        Items = (await _api.GetCategoriesAsync()) ?? new();
         await base.OnInitializedAsync();
     }
 
-    private async Task Delete(Category item)
+    private async Task Delete(Category category)
     {
         try
         {
-            await _api.DeleteCategoryAsync(item.Id!);
-            Items.Remove(item);
+            await _api.DeleteCategoryAsync(category.Id!);
+            Items.Remove(category);
         }
-        catch (Exception e)
-        {
-            Console.WriteLine($"Failed to delete category of id {item.Id}, exception: {e.Message}");
-        }
+        catch { }
     }
 
     private async Task Save()
@@ -54,25 +46,21 @@
         {
             await _api.SaveCategoryAsync(Item);
             if (!Items.Contains(Item))
+            {
                 Items.Add(Item);
-            Item = new();
+            }
+            Item = new Category();
         }
-        catch (Exception e)
-        {
-            Console.WriteLine($"Failed to save category of id {Item.Id}, exception: {e.Message}");
-        }
+        catch { }
     }
 
-    private Task Select(Category item)
+    private Task Select(Category category)
     {
         try
         {
-            Item = item;
+            Item = category;
         }
-        catch
-        {
-
-        }
+        catch { }
         return Task.CompletedTask;
     }
 }
