WebDevWithBlazor: chap9, add some styles

--- a/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Pages/Index.razor
+++ b/Csharp/WebDevelopmentWithBlazor/MyBlog/Components/Pages/Index.razor
@@ -1,16 +1,20 @@
 ﻿@page "/"
 @using Data.Models
 @using Data.Models.Interfaces
+@using Markdig
 @inject IBlogApi _api
 
-<ul>
-    <Virtualize ItemsProvider="LoadPosts" Context="post">
-        <li><a href="/Post/@post.Id">@post.Title</a></li>
-    </Virtualize>
-</ul>
+<Virtualize ItemsProvider="LoadPosts" Context="post">
+    <article>
+        <h2>@post.Title</h2>
+        @((MarkupString)Markdig.Markdown.ToHtml(new string(post.Text.Take(100).ToArray()), pipeline))
+        <a href="/Post/@post.Id">Read more</a>
+    </article>
+</Virtualize>
 
 @code {
     public int totalBlogposts { get; set; }
+    private MarkdownPipeline pipeline;
 
     private async ValueTask<ItemsProviderResult<BlogPost>>
     LoadPosts(ItemsProviderRequest request)
@@ -22,5 +26,11 @@
         var numOfPosts = Math.Min(request.Count, totalBlogposts - request.StartIndex);
         var blogPosts = await _api.GetBlogPostsAsync(numOfPosts, request.StartIndex);
         return new ItemsProviderResult<BlogPost>(blogPosts, totalBlogposts);
+    }
+
+    protected override Task OnInitializedAsync()
+    {
+        pipeline = new MarkdownPipelineBuilder().UseEmojiAndSmiley().Build();
+        return base.OnInitializedAsync();
     }
 }
