BlazorInAction: chap3, add trail details view

--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/HomePage.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/HomePage.razor
@@ -9,10 +9,11 @@
 }
 else
 {
+    <TrailDetails Trail="_selectedTrail" />
     <div class="grid">
         @foreach (var trail in _trails)
         {
-            <TrailCard Trail="trail"/>
+            <TrailCard Trail="trail" OnSelected="HandleTrailSelected"/>
         }
     </div>
 }
@@ -20,6 +21,7 @@ else
 
 @code {
     private IEnumerable<Trail>? _trails;
+    private Trail? _selectedTrail;
     
     protected override async Task OnInitializedAsync()
     {
@@ -32,4 +34,7 @@ else
             Console.WriteLine($"There was a problem loading trail data: {ex.Message}");
         }
     }
+
+    private void HandleTrailSelected(Trail trail) =>
+        _selectedTrail = trail;
 }
