--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/TrailCard.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/TrailCard.razor
@@ -16,10 +16,15 @@
                 @Trail.Length km
             </span>
         </div>
+        <button class="btn btn-primary" title="View" @onclick="@(async () => await OnSelected.InvokeAsync(Trail))">
+            <i class="bi bi-binoculars"></i>
+        </button>
     </div>
 </div>
 
 @code {
     [Parameter, EditorRequired]
     public Trail Trail { get; set; } = default!;
+    [Parameter, EditorRequired]
+    public EventCallback<Trail> OnSelected { get; set; }
 }
