--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/wwwroot/css/app.css
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/wwwroot/css/app.css
@@ -14,14 +14,14 @@ a {
     text-decoration: underline;
 }
 
-    a:hover {
-        color: var(--brand-hover);
-        text-decoration: none;
-    }
+a:hover {
+    color: var(--brand-hover);
+    text-decoration: none;
+}
 
 .navbar {
     border-bottom: 2px solid var(--brand);
-    background: linear-gradient(90deg, rgba(255,255,255,1) 5%, rgba(255,255,255,0) 100%), url("../images/navbar-bg.jpg") no-repeat center;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 1) 5%, rgba(255, 255, 255, 0) 100%), url("../images/navbar-bg.jpg") no-repeat center;
     background-size: cover;
 }
 
@@ -30,20 +30,20 @@ a {
     border-color: var(--brand);
 }
 
-    .btn-primary:hover {
-        background-color: var(--brand-hover);
-        border-color: var(--brand-hover);
-    }
+.btn-primary:hover {
+    background-color: var(--brand-hover);
+    border-color: var(--brand-hover);
+}
 
 .btn-outline-primary {
     border-color: var(--brand);
     color: var(--brand);
 }
 
-    .btn-outline-primary:hover {
-        background-color: var(--brand);
-        border-color: var(--brand);
-    }
+.btn-outline-primary:hover {
+    background-color: var(--brand);
+    border-color: var(--brand);
+}
 
 .grid {
     display: grid;
@@ -64,9 +64,9 @@ a {
     z-index: 1000;
 }
 
-    #blazor-error-ui .dismiss {
-        cursor: pointer;
-        position: absolute;
-        right: 0.75rem;
-        top: 0.5rem;
-    }
+#blazor-error-ui .dismiss {
+    cursor: pointer;
+    position: absolute;
+    right: 0.75rem;
+    top: 0.5rem;
+}
