--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/SearchFilter.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/SearchFilter.razor
@@ -3,6 +3,8 @@
 <div class="filters">
     <label for="maxLength">Max Length</label>
     <input id="maxLength" type="number" class="form-control" @bind="_maxLength" />
+    <label for="maxTime">Max Time</label>
+    <input id="maxTime" type="number" class="form-control" @bind="_maxTime" />
     <button class="btn btn-outline-primary" @onclick="FilterSearchResults">
         Filter
     </button>
@@ -14,14 +16,36 @@
 @code {
     [Parameter, EditorRequired]
     public string SearchTerm { get; set; } = default!;
+    [Parameter]
+    public int? MaxLength { get; set; }
+    [Parameter]
+    public int? MaxTime { get; set; }
     private int _maxLength;
+    private int _maxTime;
 
-    private void FilterSearchResults() =>
-        NavManager.NavigateTo($"/search/{SearchTerm}/maxlength/{_maxLength}");
+    protected override void OnInitialized()
+    {
+        Console.WriteLine($"MaxLength = {MaxLength}, MaxTime = {MaxTime}");
+        _maxLength = MaxLength ?? 0;
+        _maxTime = MaxTime ?? 0;
+    }
+
+    private void FilterSearchResults()
+    {
+        var uriWithQueryString = NavManager.GetUriWithQueryParameters(
+            new Dictionary<string, object?>()
+            {
+                [nameof(SearchPage.MaxLength)] = _maxLength == 0 ? null : _maxLength,
+                [nameof(SearchPage.MaxTime)] = _maxTime == 0 ? null : _maxTime
+            }
+        );
+        NavManager.NavigateTo(uriWithQueryString);
+    }
     
     private void ClearSearchFilter()
     {
         _maxLength = 0;
+        _maxTime = 0;
         NavManager.NavigateTo($"/search/{SearchTerm}");
     }
 }
