--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/SearchPage.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/SearchPage.razor
@@ -1,5 +1,4 @@
 @page "/search/{SearchTerm}"
-@page "/search/{SearchTerm}/maxlength/{MaxLength:int?}"
 @inject HttpClient Http
 @inject NavigationManager NavManager
 
@@ -18,7 +17,7 @@
 
 <h3 class="mt-5 mb-4">Search results for "@SearchTerm"</h3>
 
-<SearchFilter SearchTerm="@SearchTerm" />
+<SearchFilter SearchTerm="@SearchTerm" MaxLength="MaxLength" MaxTime="MaxTime" />
 
 @if (_searchResults == null)
 {
@@ -38,8 +37,10 @@ else
 @code {
     [Parameter]
     public string SearchTerm { get; set; } = default!;
-    [Parameter]
+    [Parameter, SupplyParameterFromQuery]
     public int? MaxLength { get; set; }
+    [Parameter, SupplyParameterFromQuery]
+    public int? MaxTime { get; set; }
     private IEnumerable<Trail>? _searchResults;
     private Trail? _selectedTrail;
     private IEnumerable<Trail> _cachedSearchResults = [];
@@ -60,18 +61,35 @@ else
         }
     }
 
-    protected override void OnParametersSet()
+    protected override void OnParametersSet() =>
+        UpdateFilters();
+
+    private void HandleTrailSelected(Trail trail) =>
+        _selectedTrail = trail;
+
+    private void UpdateFilters()
     {
-        if (_cachedSearchResults.Any() && MaxLength.HasValue)
+        List<Func<Trail, bool>> filters = new();
+        
+        if (MaxLength is not null && MaxLength > 0)
         {
-            _searchResults = _cachedSearchResults.Where(trail => trail.Length <= MaxLength);
+            filters.Add(trail => trail.Length <= MaxLength);
         }
-        else if (_cachedSearchResults.Any() && !MaxLength.HasValue)
+
+        if (MaxTime is not null && MaxTime > 0)
+        {
+            filters.Add(trail => trail.TimeInMinutes <= MaxTime * 60);
+        }
+
+        if (filters.Any())
+        {
+            _searchResults = _cachedSearchResults.Where(
+                trail => filters.All(filter => filter(trail))
+            );
+        }
+        else
         {
             _searchResults = _cachedSearchResults;
         }
     }
-
-    private void HandleTrailSelected(Trail trail) =>
-        _selectedTrail = trail;
 }
