--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/AddTrailPage.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/AddTrailPage.razor
@@ -1,4 +1,5 @@
 @page "/add-trail"
+@inject IMediator Mediator
 
 <PageTitle>Add Trail - Blazing Trails</PageTitle>
 
@@ -15,7 +16,27 @@
 
 <h3 class="mt-5 mb-4">Add a trail</h3>
 
+@if (_submitSuccessful)
+{
+    <div class="alert alert-success" role="alert">
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+        </svg>
+        Your trail has been submitted successfully!
+    </div>
+}
+else if (_errorMessage != null)
+{
+    <div class="alert alert-danger" role="alert">
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z" />
+        </svg>
+        @_errorMessage
+    </div>
+}
+
 <EditForm Model="_trail" OnValidSubmit="SubmitForm">
+    <FluentValidationValidator />
 
     <FormSection Title="Basic Details"
         HelpText="This information is used to identify the trail and can be searched to help hikers find it.">
@@ -24,6 +45,7 @@
                 Name
             </label>
             <InputText class="form-control" id="trailName" @bind-Value="_trail.Name" />
+            <ValidationMessage For="@(() => _trail.Name)" />
         </FormFieldSet>
 
         <FormFieldSet>
@@ -31,6 +53,7 @@
                 Description
             </label>
             <InputTextArea rows="6" class="form-control" id="trailDescription" @bind-Value="_trail.Description" />
+            <ValidationMessage For="@(() => _trail.Description)" />
         </FormFieldSet>
 
         <FormFieldSet Width="col-6">
@@ -38,6 +61,7 @@
                 Location
             </label>
             <InputText class="form-control" id="trailLocation" @bind-Value="_trail.Location" />
+            <ValidationMessage For="@(() => _trail.Location)" />
         </FormFieldSet>
     </FormSection>
 
@@ -48,6 +72,7 @@
                 Length (km)
             </label>
             <InputNumber class="form-control" id="trailLength" @bind-Value="_trail.Length" />
+            <ValidationMessage For="@(() => _trail.Length)" />
         </FormFieldSet>
     </FormSection>
 
@@ -77,6 +102,7 @@
                         </label>
                         <InputText id="routeInstructionDescription" @bind-Value="routeInstruction.Description"
                         class="form-control"/>
+                        <ValidationMessage For="@(() => routeInstruction.Description)" />
                     </div>
                 </div>
 
@@ -97,6 +123,7 @@
                 @onclick="@(() => _trail.Route.Add(new TrailDto.RouteInstruction()))">
                 Add Instruction
                 </button>
+                <ValidationMessage For="@(() => _trail.Route)" />
             </div>
         </div>
     </FormSection>
@@ -119,9 +146,20 @@
 
 @code {
     private TrailDto _trail = new();
+    private bool _submitSuccessful;
+    private string? _errorMessage;
 
     private async Task SubmitForm()
     {
-        @* TODO *@
+        var response = await Mediator.Send(new AddTrailRequest(_trail));
+        if (response == null || response?.TrailId == -1)
+        {
+            _errorMessage = "There was a problem saving you trail.";
+            _submitSuccessful = false;
+            return;
+        }
+        _trail = new();
+        _errorMessage = null;
+        _submitSuccessful = true;
     }
 }
