--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/Shared/TrailForm.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/Shared/TrailForm.razor
@@ -1,39 +1,5 @@
-@page "/add-trail"
+@using MediatR
 @inject IMediator Mediator
-
-<PageTitle>Add Trail - Blazing Trails</PageTitle>
-
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a href="/">Home</a>
-        </li>
-        <li class="breadcrumb-item active" aria-current="page">
-            Add Trail
-        </li>
-    </ol>
-</nav>
-
-<h3 class="mt-5 mb-4">Add a trail</h3>
-
-@if (_submitSuccessful)
-{
-    <div class="alert alert-success" role="alert">
-        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
-        </svg>
-        Your trail has been submitted successfully!
-    </div>
-}
-else if (_errorMessage != null)
-{
-    <div class="alert alert-danger" role="alert">
-        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z" />
-        </svg>
-        @_errorMessage
-    </div>
-}
 
 <EditForm EditContext="_editContext" OnValidSubmit="SubmitForm">
     <FluentValidationValidator />
@@ -68,8 +34,22 @@ else if (_errorMessage != null)
             <label class="font-weight-bold text-secondary" for="trailImage">
                 Image
             </label>
-            <InputFile id="trailImage" accept=".png,.jpg,.jpeg" OnChange="LoadTrailImage"
-            class="form-control-file" />
+            @if (string.IsNullOrWhiteSpace(_trail.Image))
+            {
+                <InputFile id="trailImage" accept=".png,.jpg,.jpeg" OnChange="LoadTrailImage"
+                class="form-control-file" />
+            }
+            else
+            {
+                <div class="card bg-dark text-white">
+                    <img src="images/@_trail.Image" />
+                    <div class="card-img-overlay">
+                        <button class="btn btn-primary btn-sm" @onclick="RemoveTrailImage">
+                            Remove
+                        </button>
+                    </div>
+                </div>
+            }
         </FormFieldSet>
     </FormSection>
 
@@ -161,42 +141,50 @@ else if (_errorMessage != null)
 
 
 @code {
+    [Parameter, EditorRequired]
+    public Func<TrailDto, IBrowserFile?, Task> OnSubmit { get; set; } = default!;
+    [Parameter]
+    public TrailDto? Trail { get; set; }
     private TrailDto _trail = new();
     private EditContext _editContext = default!;
-    private bool _submitSuccessful;
-    private string? _errorMessage;
     private IBrowserFile? _trailImage;
 
-    protected override void OnInitialized()
+    protected override void OnParametersSet()
     {
         _editContext = new(_trail);
         _editContext.SetFieldCssClassProvider(new BootstrapCssClassProvider());
+
+        if (Trail != null)
+        {
+            _trail.Id = Trail.Id;
+            _trail.Name = Trail.Name;
+            _trail.Description = Trail.Description;
+            _trail.Location = Trail.Location;
+            _trail.TimeInMinutes = Trail.TimeInMinutes;
+            _trail.Length = Trail.Length;
+            _trail.Image = Trail.Image;
+            _trail.ImageAction = ImageAction.None;
+
+            _trail.Route.Clear();
+            _trail.Route.AddRange(Trail.Route.Select(ri =>
+                new TrailDto.RouteInstruction
+                {
+                    Stage = ri.Stage,
+                    Description = ri.Description
+                }));
+        }
     }
 
-    private void LoadTrailImage(InputFileChangeEventArgs args) =>
-        _trailImage = args.File;
-
-    private async Task SubmitForm()
+    private void LoadTrailImage(InputFileChangeEventArgs args)
     {
-        var response = await Mediator.Send(new AddTrailRequest(_trail));
-        if (response == null || response?.TrailId == -1)
-        {
-            _errorMessage = "There was a problem saving you trail.";
-            _submitSuccessful = false;
-            return;
-        }
-
-        if (_trailImage == null)
-        {
-            _submitSuccessful = true;
-            ResetForm();
-            return;
-        }
-
-        await ProcessImage(response!.TrailId);
+        _trailImage = args.File;
+        _trail.ImageAction = ImageAction.Add;
     }
+    
+    private async Task SubmitForm() =>
+        await OnSubmit(_trail, _trailImage);
 
-    private void ResetForm()
+    public void ResetForm()
     {
         _trail = new();
         _editContext = new(_trail);
@@ -204,17 +192,9 @@ else if (_errorMessage != null)
         _trailImage = null;
     }
 
-    private async Task ProcessImage(int trailId)
+    private void RemoveTrailImage(MouseEventArgs args)
     {
-        var imageUploadResponse = await Mediator.Send(new UploadTrailImageRequest(trailId, _trailImage!));
-
-        if (string.IsNullOrWhiteSpace(imageUploadResponse.ImageName))
-        {
-            _errorMessage = "Your trail was saved, but there was a problem loading the image.";
-            return;
-        }
-
-        _submitSuccessful = true;
-        ResetForm();
+        _trail.Image = null;
+        _trail.ImageAction = ImageAction.Remove;
     }
 }
