--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/EditTrail/EditTrailPage.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/EditTrail/EditTrailPage.razor
@@ -104,7 +104,7 @@ else
             }
             if (trail.ImageAction == ImageAction.Remove)
             {
-                _trail.Image = "";
+                _trail.Image = null;
             }
         }
 
