BlazorInAction: chap8, add map in trail details

--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/HomePage.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/HomePage.razor
@@ -83,7 +83,8 @@ else
                     Image = t.Image ?? string.Empty,
                     Location = t.Location,
                     Length = t.Length,
-                    TimeInMinutes = t.TimeInMinutes
+                    TimeInMinutes = t.TimeInMinutes,
+                    Waypoints = t.Waypoints.Select(wp => new BlazingTrails.ComponentLibrary.Map.LatLong(wp.Latitude, wp.Longitude)).ToList()
                 });
         }
         catch (HttpRequestException ex)
