BlazorInAction: chap9, add auth for pages/endpoints(bug: cannot get Name from Identity in API)

--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/HomePage.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/HomePage.razor
@@ -15,11 +15,22 @@ else
 
     @if (_trails.Any())
     {
-        <div class="mb-4">
-            <p class="font-italic text-center">
-                Do you have an awesome trail you'd like to shared? <a href="add-trail">Add it here</a>.
-            </p>
-        </div>
+        <AuthorizeView>
+            <Authorized>
+                <div class="mb-4">
+                    <p class="font-italic text-center">
+                        Do you have an awesome trail you'd like to shared? <a href="add-trail">Add it here</a>.
+                    </p>
+                </div>
+            </Authorized>
+            <NotAuthorized>
+                <div class="mb-4">
+                    <p class="font-italic text-center">
+                        Do you have an awesome trail you'd like to shared? Please <a href="authentication/login">log in or sign up</a>.
+                    </p>
+                </div>                
+            </NotAuthorized>
+        </AuthorizeView>
 
         <ViewSwitcher Items="_trails" Context="trail">
             <GridTemplate>
@@ -40,12 +51,17 @@ else
                 <td>@(trail.Length)km</td>
                 <td>@trail.TimeFormatted</td>
                 <td class="text-right">
+                    <AuthorizeView>
+                        @if (trail.Owner.Equals(context.User.Identity?.Name, StringComparison.OrdinalIgnoreCase))
+                        {
+                            <button @onclick="@(() => NavManager.NavigateTo($"/edit-trail/{trail.Id}"))" title="Edit"
+                                class="btn btn-outline-secondary">
+                                <i class="bi bi-pencil"></i>
+                            </button>
+                        }
+                    </AuthorizeView>
                     <button @onclick="@(() => HandleTrailSelected(trail))" title="View" class="btn btn-primary">
                         <i class="bi bi-binoculars"></i>
-                    </button>
-                    <button @onclick="@(() => NavManager.NavigateTo($"/edit-trail/{trail.Id}"))" title="Edit"
-                        class="btn btn-outline-secondary">
-                        <i class="bi bi-pencil"></i>
                     </button>
                 </td>
             </RowTemplate>
@@ -84,6 +100,7 @@ else
                     Location = t.Location,
                     Length = t.Length,
                     TimeInMinutes = t.TimeInMinutes,
+                    Owner = t.Owner,
                     Waypoints = t.Waypoints.Select(wp => new BlazingTrails.ComponentLibrary.Map.LatLong(wp.Latitude, wp.Longitude)).ToList()
                 });
         }
