--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/Shared/TrailCard.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/Shared/TrailCard.razor
@@ -24,10 +24,15 @@
             <i class="bi bi-binoculars"></i>
         </button>
         
-        <button class="btn btn-outline-secondary float-right" title="Edit"
-        @onclick="@(() => NavManager.NavigateTo($"/edit-trail/{Trail.Id}"))">
-        Update
-        </button>
+        <AuthorizeView>
+            @if (Trail.Owner.Equals(context.User.Identity?.Name, StringComparison.OrdinalIgnoreCase))
+            {
+                <button class="btn btn-outline-secondary mt-3 float-right" title="Edit"
+                @onclick="@(() => NavManager.NavigateTo($"/edit-trail/{Trail.Id}"))">
+                    <i class="bi bi-pencil"></i>
+                </button>
+            }
+        </AuthorizeView>
     </div>
 </div>
 
