--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/EditTrail/EditTrailPage.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/EditTrail/EditTrailPage.razor
@@ -1,4 +1,5 @@
 @page "/edit-trail/{TrailId:int}"
+@attribute [Authorize]
 @inject IMediator Mediator
 
 <PageTitle>Edit Trail - Blazing Trails</PageTitle>
