--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/Shared/TrailCard.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/Home/Shared/TrailCard.razor
@@ -25,7 +25,8 @@
         </button>
         
         <AuthorizeView>
-            @if (Trail.Owner.Equals(context.User.Identity?.Name, StringComparison.OrdinalIgnoreCase))
+            @if (Trail.Owner.Equals(context.User.Identity?.Name, StringComparison.OrdinalIgnoreCase) ||
+                context.User.IsInRole("Administrator"))
             {
                 <button class="btn btn-outline-secondary mt-3 float-right" title="Edit"
                 @onclick="@(() => NavManager.NavigateTo($"/edit-trail/{Trail.Id}"))">
