BlazorInAction: chap10, part of form tracker

--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/Shared/TrailForm.razor
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/Features/ManageTrails/Shared/TrailForm.razor
@@ -4,6 +4,7 @@
 
 <EditForm EditContext="_editContext" OnValidSubmit="SubmitForm">
     <FluentValidationValidator />
+    <FormStateTracker />
 
     <FormSection Title="Basic Details"
         HelpText="This information is used to identify the trail and can be searched to help hikers find it.">
