MS Tutorial: Blazzing Pizza, use EditForm for input and validation

--- a/Csharp/MsTutorials/Blazor/BlazingPizza/Shared/ConfigurePizzaDialog.razor
+++ b/Csharp/MsTutorials/Blazor/BlazingPizza/Shared/ConfigurePizzaDialog.razor
@@ -6,12 +6,10 @@
             <h2>@Pizza.Special.Name</h2>
             @Pizza.Special.Description
         </div>
-
         <form class="dialog-body">
             <div>
                 <label>Size:</label>
-                <input type="range" @bind="Pizza.Size" @bind:event="oninput"
-                    min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" step="1" />
+                <input type="range" min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" step="1" @bind="Pizza.Size" @bind:event="oninput" />
                 <span class="size-label">
                     @(Pizza.Size)" (£@(Pizza.GetFormattedTotalPrice()))
                 </span>
@@ -29,10 +27,9 @@
 </div>
 
 @code {
-    [Parameter, EditorRequired]
-    public Pizza Pizza { get; set; } = default!;
-    [Parameter]
-    public EventCallback OnCancel { get; set; }
-    [Parameter]
-    public EventCallback OnConfirm { get; set; }
+
+    [Parameter] public Pizza Pizza { get; set; }
+    [Parameter] public EventCallback OnCancel { get; set; }
+    [Parameter] public EventCallback OnConfirm { get; set; }
+
 }
