--- a/Csharp/MsTutorials/Blazor/BlazingPizza/_Imports.razor
+++ b/Csharp/MsTutorials/Blazor/BlazingPizza/_Imports.razor
@@ -8,4 +8,4 @@
 @using Microsoft.JSInterop
 @using BlazingPizza
 @using BlazingPizza.Shared
-@using BlazingPizza.Services
+@using System.Net.Http.Json
