--- a/Csharp/MsTutorials/Blazor/BlazingPizza/Pages/Index.razor
+++ b/Csharp/MsTutorials/Blazor/BlazingPizza/Pages/Index.razor
@@ -1,41 +1,50 @@
 @page "/"
+@layout MainLayout
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
 @inject OrderState OrderState
 
 <div class="main">
-    <h1>Blazing Pizzas</h1>
-
-    <ul class="pizza-cards">
-        @if (specials.Any())
-        {
-            @foreach (var special in specials)
-            {
-                <li style="background-image: url('@special.ImageUrl');"
-                @onclick="@(() => OrderState.ShowConfigurePizzaDialog(special))">
-                    <div class="pizza-info">
-                        <span class="title">@special.Name</span>
-                        @special.Description
-                        <span class="price">@special.GetFormattedBasePrice()</span>
-                    </div>
-                </li>
-            }
-        }
-    </ul>
+  <ul class="pizza-cards">
+    @if (specials != null)
+    {
+      @foreach (var special in specials)
+      {
+          <li @onclick="@(() => OrderState.ShowConfigurePizzaDialog(special))" style="background-image: url('@special.ImageUrl')">
+          <div class="pizza-info">
+          <span class="title">@special.Name</span>
+          @special.Description
+          <span class="price">@special.GetFormattedBasePrice()</span>
+          </div>
+        </li>
+      }
+    }
+  </ul>
 </div>
+
+@if (OrderState.ShowingConfigureDialog)
+{
+    <ConfigurePizzaDialog
+      Pizza="OrderState.ConfiguringPizza"
+      OnCancel="OrderState.CancelConfigurePizzaDialog"
+      OnConfirm="OrderState.ConfirmConfigurePizzaDialog" />
+}
 
 <div class="sidebar">
     @if (order.Pizzas.Any())
     {
         <div class="order-contents">
             <h2>Your order</h2>
+
             @foreach (var configuredPizza in order.Pizzas)
             {
-                <div class="cart-item">
-                    <div class="title">@(configuredPizza.Size)" @configuredPizza.Special.Name</div>
-                    <div class="item-price">@configuredPizza.GetFormattedTotalPrice()</div>
-                    <a @onclick="@(() => OrderState.RemoveConfiguredPizza(configuredPizza))" class="delete-item">x</a>
-                </div>
+              <div class="cart-item">
+                  <a @onclick="@(() => OrderState.RemoveConfiguredPizza(configuredPizza))" class="delete-item">x</a>
+                  <div class="title">@(configuredPizza.Size)" @configuredPizza.Special.Name</div>
+                  <div class="item-price">
+                      @configuredPizza.GetFormattedTotalPrice()
+                  </div>
+              </div>
             }
         </div>
     }
@@ -53,18 +62,13 @@
     </div>
 </div>
 
-@if (@OrderState.ShowingConfigureDialog)
-{
-    <ConfigurePizzaDialog Pizza="OrderState.ConfiguringPizza" OnCancel="OrderState.CancelConfigurePizzaDialog"
-    OnConfirm="OrderState.ConfirmConfigurePizzaDialog" />
-}
-
 @code {
-    private List<PizzaSpecial> specials = [];
-    private Order order => OrderState.Order;
-    
-    protected override async Task OnInitializedAsync()
-    {
-        specials = (await HttpClient.GetFromJsonAsync<List<PizzaSpecial>>(NavigationManager.BaseUri + "specials"))!;
-    }
+  List<PizzaSpecial> specials = new List<PizzaSpecial>();
+  Order order => OrderState.Order;
+
+  protected override async Task OnInitializedAsync()
+  {
+      specials = await HttpClient.GetFromJsonAsync<List<PizzaSpecial>>(NavigationManager.BaseUri + "specials");
+  }
 }
+		
