--- a/Csharp/MsTutorials/Blazor/BlazingPizza/Shared/AddressEditor.razor
+++ b/Csharp/MsTutorials/Blazor/BlazingPizza/Shared/AddressEditor.razor
@@ -1,8 +1,8 @@
 <div class="form-field">
     <label>Name:</label>
     <div>
-        <InputText @bind-Value="Address.Name"/>
-        <ValidationMessage For="() => Address.Name" />
+        <InputText @bind-Value="Address.Name" />
+        <ValidationMessage For="@(() => Address.Name)" />
     </div>
 </div>
 
@@ -10,7 +10,7 @@
     <label>Line 1:</label>
     <div>
         <InputText @bind-Value="Address.Line1" />
-        <ValidationMessage For="() => Address.Line1" />
+        <ValidationMessage For="@(() => Address.Line1)" />
     </div>
 </div>
 
@@ -18,7 +18,7 @@
     <label>Line 2:</label>
     <div>
         <InputText @bind-Value="Address.Line2" />
-        <ValidationMessage For="() => Address.Line2" />
+        <ValidationMessage For="@(() => Address.Line2)" />
     </div>
 </div>
 
@@ -26,7 +26,7 @@
     <label>City:</label>
     <div>
         <InputText @bind-Value="Address.City" />
-        <ValidationMessage For="() => Address.City" />
+        <ValidationMessage For="@(() => Address.City)" />
     </div>
 </div>
 
@@ -34,7 +34,7 @@
     <label>Region:</label>
     <div>
         <InputText @bind-Value="Address.Region" />
-        <ValidationMessage For="() => Address.Region" />
+        <ValidationMessage For="@(() => Address.Region)" />
     </div>
 </div>
 
@@ -42,12 +42,11 @@
     <label>Postal code:</label>
     <div>
         <InputText @bind-Value="Address.PostalCode" />
-        <ValidationMessage For="() => Address.PostalCode" />
+        <ValidationMessage For="@(() => Address.PostalCode)" />
     </div>
 </div>
 
 @code {
-    [Parameter]
-    public Address Address { get; set; }
-
+    [Parameter, EditorRequired]
+    public required Address Address { get; set; }
 }
